--- a/tarea_5.html
+++ b/tarea_5.html
@@ -45,7 +45,7 @@ Esta investigaci&oacute;n es relevante porque el pl&aacute;stico tarda en degrad
 
 
 
-
+<div class="tablaProductos">
 <th>Gelater&iacute;a Jumbo ofertas</th>
 <table border="3" bgcolor="lightyellow" style="width:40%">
 	<tr>
